thumbnailer: Remove duplicate function declarations

This shuts up a gcc warning.

https://bugzilla.gnome.org/show_bug.cgi?id=709819